# Rust-Keylogger-with-RSA-encryption

./: .gitignore  Cargo.toml  README.md
src/: discord.rs  keylogger.rs  main.rs  rsa.rs
src/keylogger/: config.rs  discord.rs
