[package]
name = "projet-pei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
input = "0.9.0"
queues = "1.1.0"
rdev = "0.5.3"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
